<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Default -->
    <string name="app_name">chupa</string>
    <string name="facebook_app_id">383936855088677</string>

    <!-- Word -->
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="logo">Logo</string>
    <string name="icon">Icon</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="delete">Delete</string>
    <string name="re_send">Re-send</string>
    <string name="select">Select</string>
    <string name="gender">Gender</string>
    <string name="drawer">Drawer</string>
    <string name="exit_square">Leave Ground</string>
    <string name="send">send</string>
    <string name="send_chupa">Send chupa</string>
    <string name="alarm">Alarm</string>
    <string name="chat">Chat</string>
    <string name="chupa">Chupa</string>
    <string name="player">Team</string>
    <string name="blank">Blank</string>
    <string name="fail">Fail</string>
    <string name="age">age</string>
    <string name="person">person</string>
    <string name="admin">Admin</string>
    <string name="square">Ground</string>
    <string name="meter">m</string>
    <string name="kilometer">km</string>
    <string name="guide">guide</string>
    <string name="notification">Notification</string>
    <string name="more">More</string>
    <string name="share_to">Share to:</string>
    <string name="question">Question</string>
    <string name="share">Share</string>
    <string name="app_settings">Settings</string>
    <string name="facebook_login">Login using Facebook</string>
    <string name="facebook_logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="register_profile">Register Profile</string>
    <string name="enter">Enter</string>
    <string name="preview">Preview</string>

    <!-- Sentence -->
    <string name="min_nick_name_message">Please type in more than 1 letters.</string>
    <string name="bad_nick_name_message">Special letter is not good as nick name.</string>
    <string name="bad_entry_code_message">This is wrong entry code.</string>
    <string name="enter_square_message">enters ground.</string>
    <string name="exit_square_message">leaves ground.</string>
    <string name="enter_preview_square_message">enters ground as preview.</string>
    <string name="exit_square_consent_message">Every chat and chupa will be deleted. Do you want to leave ground?</string>
    <string name="send_chupa_notification_title">sends you a chupa.</string>
    <string name="forced_logout_title">You have been logout.</string>
    <string name="google_play_services_message">Please check Google Play Service.</string>
    <string name="update_app_message">There is a new version. Please update App.</string>
    <string name="internet_not_connected_message">Internet is unavailable. Please check network status.</string>
    <string name="send_message_fail_message">Select action.</string>
    <string name="number_of_member_question">How many with you?</string>
    <string name="review_message">Do you want to hear favorite place\'s news?\n\nTell us your ground by review.</string>
    <string name="no_today_message">I will do</string>
    <string name="location_consent_message">Chupa uses location information, but we never collect.\nIf you click above button, we think you agree the use.</string>
    <string name="location_turn_on_message">Please enable location service.</string>
    <string name="no_facebook_upload_message">We doesn\'t upload any contents on facebook.</string>
    <string name="birthday_access_message">We need birthday for calculating age.</string>
    <string name="greeting_sentence">Say hello to others.</string>
    <string name="share_sentence">Would you throw Chupa with me? You can meet the people in the same place with you!\nwww.sendchupa.com</string>
    <string name="duplicated_nick_name_message">Another user is already using this nick name.</string>
    <string name="enter_nick_name_message">Please enter nick name</string>
    <string name="enter_code_message">Please enter code</string>
    <string name="chupa_bomb_notification_title">Chupa Bomb!</string>
    <string name="profile_settings_complete_message">Profile settings are completed.</string>
    <string name="preview_warning_message">It\'s preview. You can\'t chat.</string>

    <!-- String Array -->
    <string-array name="profile_image_select_delete_string_array">
        <item>Select picture from Album</item>
        <item>Take picture</item>
        <item>Delete</item>
    </string-array>
    <string-array name="profile_image_select_string_array">
        <item>Select picture from Album</item>
        <item>Take picture</item>
    </string-array>

    <!--
         Reference
        <string name="dash">&#160;-&#160;</string>
    -->

</resources>