<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white" >

    <com.pinthecloud.athere.view.SquareImageView
        android:id="@+id/profile_dialog_profile_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/profile_image" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_dialog_profile_height"
        android:layout_alignBottom="@+id/profile_dialog_profile_image"
        android:background="@color/profile_dialog_profile" >

        <TextView
            android:id="@+id/profile_dialog_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_large" />

        <TextView
            android:id="@+id/profile_dialog_age_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_normal" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_dialog_send_chupa_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_dialog_profile_height"
        android:layout_below="@+id/profile_dialog_profile_image"
        android:background="@color/profile_dialog_send_chupa" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/actionbar_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/send_chupa"
            android:textColor="@color/profile_dialog_send_chupa_text"
            android:textSize="@dimen/font_large" />
    </RelativeLayout>

</RelativeLayout>