<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true" >

    <ProgressBar
        android:id="@+id/square_drawer_frag_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/square_drawer_frag_exit_button_line"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/gray_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/square_drawer_bar_height"
            android:background="@android:color/white"
            android:paddingEnd="@dimen/square_drawer_bar_right_margin"
            android:paddingLeft="@dimen/square_drawer_bar_left_margin"
            android:paddingRight="@dimen/square_drawer_bar_right_margin"
            android:paddingStart="@dimen/square_drawer_bar_left_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/alarm"
                android:textColor="@color/gray_tab_text_unselected"
                android:textSize="@dimen/font_medium" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/square_drawer_bar_height"
            android:background="@color/gray_drawer_background"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/square_drawer_setting_bar_text_toggle_margin"
                    android:layout_marginRight="@dimen/square_drawer_setting_bar_text_toggle_margin"
                    android:text="@string/chat"
                    android:textColor="@color/gray_tab_text_unselected"
                    android:textSize="@dimen/font_medium" />

                <ToggleButton
                    android:id="@+id/square_drawer_frag_chat_alarm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:button="@drawable/on_off_toggle_bg"
                    android:textOff=""
                    android:textOn="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/square_drawer_setting_bar_text_toggle_margin"
                    android:layout_marginRight="@dimen/square_drawer_setting_bar_text_toggle_margin"
                    android:text="@string/chupa"
                    android:textColor="@color/gray_tab_text_unselected"
                    android:textSize="@dimen/font_medium" />

                <ToggleButton
                    android:id="@+id/square_drawer_frag_chupa_alarm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:button="@drawable/on_off_toggle_bg"
                    android:textOff=""
                    android:textOn="" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/square_drawer_bar_height"
            android:background="@android:color/white"
            android:gravity="start|center"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/square_drawer_bar_left_margin"
            android:paddingRight="0dp"
            android:paddingStart="@dimen/square_drawer_bar_left_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/square_drawer_member_bar_title_right_margin"
                android:layout_marginRight="@dimen/square_drawer_member_bar_title_right_margin"
                android:text="@string/player"
                android:textColor="@color/gray_tab_text_unselected"
                android:textSize="@dimen/font_medium" />

            <TextView
                android:id="@+id/square_drawer_frag_member_male_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/square_drawer_member_bar_gender_margin"
                android:layout_marginRight="@dimen/square_drawer_member_bar_gender_margin"
                android:background="@drawable/bg_sidebar_playernum_m"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_medium" />

            <TextView
                android:id="@+id/square_drawer_frag_member_female_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_sidebar_playernum_w"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_medium" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/gray_line" />

        <RelativeLayout
            android:id="@+id/square_drawer_frag_profile_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/square_drawer_participant_list_height"
            android:background="@drawable/list_white_selector_bg"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical"
            android:paddingEnd="@dimen/square_drawer_participant_list_right_margin"
            android:paddingLeft="@dimen/square_drawer_participant_list_left_margin"
            android:paddingRight="@dimen/square_drawer_participant_list_right_margin"
            android:paddingStart="@dimen/square_drawer_participant_list_left_margin" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:orientation="horizontal" >

                <com.pinthecloud.athere.view.CircleImageView
                    android:id="@+id/square_drawer_frag_profile_image"
                    android:layout_width="@dimen/square_drawer_participant_list_profile_width"
                    android:layout_height="@dimen/square_drawer_participant_list_profile_height"
                    android:layout_marginEnd="@dimen/square_drawer_participant_list_profile_nick_margin"
                    android:layout_marginRight="@dimen/square_drawer_participant_list_profile_nick_margin"
                    app:civBorderColor="@color/gray_line"
                    app:civBorderWidth="@dimen/line_height" />

                <TextView
                    android:id="@+id/square_drawer_frag_profile_nick_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/square_drawer_participant_list_nick_name_gender_margin"
                    android:layout_marginRight="@dimen/square_drawer_participant_list_nick_name_gender_margin"
                    android:ellipsize="end"
                    android:maxWidth="@dimen/square_drawer_participant_list_nick_max_width"
                    android:singleLine="true"
                    android:textSize="@dimen/font_normal" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/square_drawer_profile_company_num_height"
                    android:background="@drawable/bg_sidebar_member"
                    android:gravity="center" >

                    <ImageView
                        android:id="@+id/square_drawer_frag_profile_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/square_drawer_participant_list_gender_company_number_margin"
                        android:layout_marginRight="@dimen/square_drawer_participant_list_gender_company_number_margin"
                        android:contentDescription="@string/gender" />

                    <TextView
                        android:id="@+id/square_drawer_frag_profile_company_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_medium" />
                </LinearLayout>
            </LinearLayout>

            <ImageButton
                android:id="@+id/square_drawer_frag_profile_bar_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/profile_settings"
                android:src="@drawable/sidebar_profile_edit" />
        </RelativeLayout>

        <ListView
            android:id="@+id/square_drawer_frag_participant_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_drawer_background"
            android:divider="@null" >
        </ListView>
    </LinearLayout>

    <View
        android:id="@+id/square_drawer_frag_exit_button_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_above="@+id/square_drawer_frag_exit_button"
        android:background="@color/gray_line" />

    <Button
        android:id="@+id/square_drawer_frag_exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:text="@string/exit_square"
        android:textColor="@color/red_dark"
        android:textSize="@dimen/font_medium" />

</RelativeLayout>